Fix LTV ui bug and fix overflowing text

--- a/src/index.css
+++ b/src/index.css
@@ -138,6 +138,7 @@
   font-weight: 800;
   line-height: 133.4%;
   font-size: 1.3125rem;
+  word-break:break-all;
 }
 
 .info_container_top{
@@ -158,9 +159,12 @@
   padding-left:20px;
   width:400px;
   font-size:21px;
-  
 }
 
+.info_container_bottom_netWorth span{
+  color: rgb(165, 168, 182);
+  padding-right: 2px;
+}
 
 .b_s_container_borrow_btn, .b_s_container_supply_btn{
   font-size:large;
@@ -512,6 +516,7 @@
   border-top: 1px solid rgba(235, 235, 239, 0.08);
   padding-top:15px;
   padding-bottom:15px;
+  word-break:break-all;
 
 }
 
@@ -597,7 +602,7 @@
 .assets_supply_info_box{
   display:flex;
   background-color:rgb(41, 46, 65);
-  padding-left:10px;
+  padding-left:10
 }
 .assets_borrow_info_box_right{
   display:flex;
@@ -629,6 +634,7 @@
   letter-spacing: 0.029375rem;
   font-size: 1rem;
   font-weight:bold;
+  word-break:break-all;
 }
 
 
